--- a/CustomPlugins.csproj
+++ b/CustomPlugins.csproj
@@ -56,11 +56,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountsUpdate.cs" />
+    <Compile Include="ContactExternalData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalaryValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="crm_key.pfx" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="webResource.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
